--- a/Site1.Master
+++ b/Site1.Master
@@ -22,19 +22,16 @@
 </head>
 <body>
     <form id="form1" runat="server">
-
         <div>
             <nav class="navbar navbar-expand-lg navbar-light">
                 <a class="navbar-brand" href="#">
                     <img src="Images/imgs/books.png" width="30" height="30" />
                     E-Library
                 </a>
-
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item active">
@@ -46,72 +43,59 @@
                         <li class="nav-item active">
                             <a class="nav-link" href="#">Terms</a>
                         </li>
-
                     </ul>
-
                     <ul class="navbar-nav">
                         <li class="nav-item active">
-                            <asp:LinkButton class="nav-link" ID="LinkButton4" runat="server" OnClick="LinkButton15_Click">View Books</asp:LinkButton>
-                        </li>
-
-                        <li class="nav-item active">
-                            <asp:LinkButton class="nav-link" ID="LinkButton1" runat="server" OnClick="LinkButton16_Click">User Login</asp:LinkButton>
+                            <asp:LinkButton class="nav-link" ID="LinkButton4" runat="server" OnClick="LinkButton4_Click">View Books</asp:LinkButton>
                         </li>
                         <li class="nav-item active">
-                            <asp:LinkButton class="nav-link" ID="LinkButton2" runat="server" OnClick="LinkButton13_Click">Sign Up</asp:LinkButton>
+                            <asp:LinkButton class="nav-link" ID="LinkButton1" runat="server" OnClick="LinkButton1_Click">User Login</asp:LinkButton>
                         </li>
                         <li class="nav-item active">
-                            <asp:LinkButton class="nav-link" ID="LinkButton3" runat="server" 
-                                OnClick="LinkButton14_Click" Visible="False">Logout</asp:LinkButton>
+                            <asp:LinkButton class="nav-link" ID="LinkButton2" runat="server" OnClick="LinkButton2_Click">Sign Up</asp:LinkButton>
                         </li>
-
                         <li class="nav-item active">
-                            <asp:LinkButton class="nav-link" ID="LinkButton7" runat="server" 
+                            <asp:LinkButton class="nav-link" ID="LinkButton3" runat="server" OnClick="LinkButton3_Click"
+                                Visible="False">Logout</asp:LinkButton>
+                        </li>
+                        <li class="nav-item active">
+                            <asp:LinkButton class="nav-link" ID="LinkButton7" runat="server" OnClick="LinkButton7_Click"
                                 Visible="False">Hello user</asp:LinkButton>
-
                         </li>
                     </ul>
                 </div>
-
-
             </nav>
         </div>
-
-
         <!-- Main Content Placeholder -->
         <div>
             <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
             </asp:ContentPlaceHolder>
         </div>
         <!-- Main Content Placeholder -->
-
         <!-- Footer -->
         <footer>
             <div id="footer1" class="container-fluid">
                 <div class="row">
                     <div class="col-xs-12 col-sm-12 col-md-12 text-center">
                         <p>
-                            <asp:LinkButton class="footerlinks" ID="LinkButton6" runat="server" 
-                                OnClick="LinkButton6_Click">Admin Login</asp:LinkButton>
+                            <asp:LinkButton class="footerlinks" ID="LinkButton6" runat="server" OnClick="LinkButton6_Click">Admin Login</asp:LinkButton>
                             &nbsp;
-                            <asp:LinkButton class="footerlinks" ID="LinkButton11" runat="server"
-                                OnClick="LinkButton11_Click" Visible="False">Author Management</asp:LinkButton>
+                        <asp:LinkButton class="footerlinks" ID="LinkButton11" runat="server" OnClick="LinkButton11_Click"
+                            Visible="False">Author Management</asp:LinkButton>
                             &nbsp;
-                            <asp:LinkButton class="footerlinks" ID="LinkButton12" runat="server"
-                                OnClick="LinkButton12_Click" Visible="False">Publisher Management</asp:LinkButton>
+                        <asp:LinkButton class="footerlinks" ID="LinkButton12" runat="server" OnClick="LinkButton12_Click"
+                            Visible="False">Publisher Management</asp:LinkButton>
                             &nbsp;
-                            <asp:LinkButton class="footerlinks" ID="LinkButton8" runat="server"
-                                OnClick="LinkButton8_Click" Visible="False">Book Inventory</asp:LinkButton>
+                        <asp:LinkButton class="footerlinks" ID="LinkButton8" runat="server" OnClick="LinkButton8_Click"
+                            Visible="False">Book Inventory</asp:LinkButton>
                             &nbsp;
-                            <asp:LinkButton class="footerlinks" ID="LinkButton9" runat="server"
-                                OnClick="LinkButton9_Click" Visible="False">Book Issuing</asp:LinkButton>
+                        <asp:LinkButton class="footerlinks" ID="LinkButton9" runat="server" OnClick="LinkButton9_Click"
+                            Visible="False">Book Issuing</asp:LinkButton>
                             &nbsp;
-                             <asp:LinkButton class="footerlinks" ID="LinkButton10" runat="server"
-                                 OnClick="LinkButton10_Click" Visible="False">Member Management</asp:LinkButton>
+                        <asp:LinkButton class="footerlinks" ID="LinkButton10" runat="server" OnClick="LinkButton10_Click"
+                            Visible="False">Member Management</asp:LinkButton>
                         </p>
-
                     </div>
-
                 </div>
             </div>
             <div id="footer2" class="container-fluid">
@@ -122,10 +106,8 @@
                     </div>
                 </div>
             </div>
-
         </footer>
         <!-- ./Footer -->
-
     </form>
     <script src="JS/Script.js"></script>
     <%--Bootstrap js--%>
